# aerodrome

./: .gitignore  Cargo.toml  flake.nix  rustfmt.toml
db/migrations/: 20210307095100_initial_schema_album.sql  20210307_01_initial_album_schema.sql  20210308112254_seed_album_data.sql  20210309233154_initial_schema_track.sql  20210309_01_initial_track_schema.sql  20210310014513_seed_track_data.sql
db/seed/: 20210308_seed_album_seed_data.sql
db/tests/: 20210307_test_01_album_seed_data.sql
src/: app.rs  lib.rs  main.rs  settings.rs
src/model/: album.rs  mod.rs  track.rs
src/store/: album.rs  mod.rs  track.rs
src/web/: aerodrome_api.rs  mod.rs
src/web/aerodrome_api/: albums.rs  mod.rs  tracks.rs
src/web/subsonic_api/: browsing.rs  mod.rs  system.rs
tests/: lib.rs
tests/repository_suite/: albums.rs  albums_data.rs  mod.rs  tracks.rs
