[package]
name = "aerodrome"
version = "0.1.0"
authors = ["Robin Mattheussen <me@romatthe.dev>"]
edition = "2018"

[dependencies]
config = "0.11"
serde = { version = "1.0.125", features = ["derive"] }

# Logging
log = "0.4.0"
env_logger = "0.8.3"
futures = "0.3"
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
tokio = { version = "1.4.0", features = ["full"] }